Moved math anf half headers out of project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,16 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
-include_directories(include)
+if(NOT MATH_INCLUDE)
+  message(FATAL_ERROR "Please define MATH_INCLUDE")
+endif(NOT MATH_INCLUDE)
+get_filename_component(MATH_INCLUDE_ABS "${MATH_INCLUDE}"
+                       REALPATH BASE_DIR "${CMAKE_BINARY_DIR}")
+
+include_directories(
+  include
+  ${MATH_INCLUDE_ABS}
+)
 
 set( GATHERER_SOURCES 
   src/path.cpp
