Attempts to render a triangle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,4 @@ target_link_libraries(${PROJECT_NAME}client glfw)
 target_link_libraries(${PROJECT_NAME}client OpenGL::GL)
 target_link_libraries(${PROJECT_NAME}client GLEW::glew)
 target_link_libraries(${PROJECT_NAME}client ${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
