Made RenderData template based

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,12 +32,10 @@ find_package(glfw3 REQUIRED)
 include(FindOpenGL)
 include(FindGLEW)
 
-set( GATHERER_SOURCES 
-  src/path.cpp
-  src/renderdata.cpp
-)
-add_library(${PROJECT_NAME} SHARED ${GATHERER_SOURCES})
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
+#set( GATHERER_SOURCES 
+#)
+#add_library(${PROJECT_NAME} SHARED ${GATHERER_SOURCES})
+#target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
 
 set( GATHERER_CLIENT_SOURCES 
   src/client/client.cpp
@@ -46,5 +44,5 @@ add_executable(${PROJECT_NAME}client ${GATHERER_CLIENT_SOURCES})
 target_link_libraries(${PROJECT_NAME}client glfw)
 target_link_libraries(${PROJECT_NAME}client OpenGL::GL)
 target_link_libraries(${PROJECT_NAME}client GLEW::glew)
-target_link_libraries(${PROJECT_NAME}client ${PROJECT_NAME})
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
+#target_link_libraries(${PROJECT_NAME}client ${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME}client ${Boost_LIBRARIES})
