Refactored paths rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ include(FindOpenGL)
 include(FindGLEW)
 
 set( GATHERER_CLIENT_SOURCES 
+  src/client/utils.cpp
+  src/client/pathsrenderer.cpp
   src/client/client.cpp
   ${IMGUI_SRCS}
 )
