Initial setup for axes visualizer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ include(FindGLEW)
 set( GATHERER_CLIENT_SOURCES 
   src/client/utils.cpp
   src/client/pathsrenderer.cpp
+  src/client/axesvisualizer.cpp
   src/client/client.cpp
   ${IMGUI_SRCS}
 )
