New data structuring emplaced

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ include(FindGLEW)
 
 set( GATHERER_CLIENT_SOURCES 
   src/client/utils.cpp
+  src/client/gathereddata.cpp
   src/client/pathsrenderer.cpp
   src/client/axesvisualizer.cpp
   src/client/scenerenderer.cpp
@@ -57,7 +58,6 @@ set( GATHERER_CLIENT_SOURCES
 )
 add_executable(${PROJECT_NAME}client ${GATHERER_CLIENT_SOURCES})
 target_link_libraries(${PROJECT_NAME}client glfw)
-target_link_libraries(${PROJECT_NAME}client OpenEXR::IlmImf)
 target_link_libraries(${PROJECT_NAME}client OpenGL::GL)
 target_link_libraries(${PROJECT_NAME}client GLEW::glew)
 target_link_libraries(${PROJECT_NAME}client ${Boost_LIBRARIES})
