Refactored selectionsphere into spherefilter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ set( GATHERER_CLIENT_SOURCES
   src/client/axesvisualizer.cpp
   src/client/scenerenderer.cpp
   src/client/filtermanager.cpp
-  src/client/selectionsphere.cpp
+  src/client/spherefilter.cpp
   src/client/application.cpp
   src/client/client.cpp
   ${IMGUI_SRCS}
